# housing_price_predictor

./: HW Instructions  HWLEXISNEXISRISK.md  README.md  data.xlsx  poetry  pyproject.toml
housing_price_predictor/: main.py
housing_price_predictor/src/: write_to_file.py
housing_price_predictor/src/classes/: House.py
housing_price_predictor/src/utils/: read_from_file.py  test.py
source/: HWtry1.py  index.rst
tests/: test_main.py
